# mycudalib

./: README.md
src/: CMakeLists.txt  mycudalib.cu  mycudalib.h
